2013-02-05  Jim Fowler  <jrf@Biblion>

	* Tools/src/BookEntry.py: Added Edition, Reprint and Reference
	fields to user interface.
	(BookEntry.indexChanged): added function to jump to an entry
	if the index number is edited.

	* Tools/src/AJBcomments.py (Reference): require semi-colon to
	termintate a Reference comment. Will have to change all the
	ajb??_books.doc/txt files. AJBcomments.py just could not handle
	Reference at the end of a line with out some sort of termination
	characters.

2013-02-02  Jim Fowler  <jrf@Biblion>

	* Tools/src/BookEntry.py (BookEntry.setInsertFunc): got the
	insertFunc to work today. I can now insert special characters or
	symbols from the symbolTable.
	(BookEntry.DisplayToEntry): began writing function. Having trouble
	using isEmpty().

2013-02-01  Jim Fowler  <jrf@Biblion>

	* Tools/src/BookEntry.py (getargs): Figured out how to find out
	which Entry window has the focus.  Need to use
	QApplication.focusChanged()

2013-01-27  Jim Fowler  <jrf@Biblion>

	* Tools/src/BookEntry.py (BookEntry): added saveEntry, newEntry,
	saveFile, saveFileAs, newFile, openFile, askSaveEntry, and
	askSaveFile.

	* Tools/src/bookfile.py (BookFile): set default name in __init__.

2013-01-26  Jim Fowler  <jrf@Biblion>

	* Tools/src/bookfile.py (BookFile.readFile): corrected an error
	in readFile.

2013-01-21  Jim Fowler  <jrf@Biblion>

	* Tools/src/headerWindow.py (main): changed getDirty() to
	isDirty()

	* Tools/src/bookfile.py (BookFile.setEntry): added setEntry and
	setNewEntry functions.

2013-01-13  Jim Fowler  <jrf@Biblion>

	* Tools/src/symbol.py: Began writing the symbol table code.
	Adapted the character_picker code from Rich Griswold's package.
	Switched to branch insert_symbol

	* Tools/src/headerWindow.py (main): Learned how to make dialog
	windows expand with the help of Walter Moriera in Austin.
	Converted the headerWindow.py file to us a designer gui
	rather than the handcrafted one.  All seems to work well.
