@@ -1,8 +1,8 @@
-ÁÉÍÓÚÜÑ
-áéíóúüñ
-¿¡ºª
-¬±÷×√∞°∙∘⋅⋆®©
-⁰¹²³⁴⁵⁶⁷⁸⁹
-₀₁₂₃₄₅₆₇₈₉
-⅛⅙⅕¼⅓⅖½⅗⅝⅔¾⅘⅚⅞
-←↑→↓↔↕↖↗↘↙↤↥↦↧
+﻿ÄäËëÖöÜüÿßͪ
+ÅåàáâҪçčèéěęìíî
+łñøôřŠšŜŝťůýżž
+£°ʰ¥$&
+ΑΒΓΔΕΖΗΘΙΚΛΜ
+ΝΞΟΠΡΣΤΥΦΧΨΩ
+αβγδεζηθκλμ
+νξοπρςστυφχψω
